--- a/clock/Base.lproj/Main.storyboard
+++ b/clock/Base.lproj/Main.storyboard
@@ -50,6 +50,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="79" y="-231"/>
         </scene>
     </scenes>
     <resources>
